--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mystery Mansion - Heist</title>
+    <title>Mystery Mansion - Lockout</title>
     <style>
         :root {
             --red: #ff0000;
@@ -415,12 +415,12 @@
 
     <div id="winScreen" class="final-screen win">
         <h2>System Unlocked!</h2>
-        <p>Thank you for playing Mystery Mansion - Heist</p>
+        <p>Thank you for playing Mystery Mansion - Lockout</p>
     </div>
 
     <div id="failScreen" class="final-screen fail">
         <h2>You Failed!</h2>
-        <p>Thank you for playing Mystery Mansion - Heist</p>
+        <p>Thank you for playing Mystery Mansion - Lockout</p>
     </div>
 
     <script>
@@ -439,7 +439,7 @@
             const clueBoxes = document.getElementById('clueBoxes');
 
             // The fixed codes that the player must enter
-            const fixedCodes = ["JOHN", "MARK", "LUKE", "RAVN", "1411", "1234", "0832", "1070"];
+            const fixedCodes = ["JOHN", "MARK", "LUKE", "MARY", "1411", "1234", "0832", "6741"];
 
             // List of potential unlock phrases
             const allPhrases = [
