--- a/index.html
+++ b/index.html
@@ -443,9 +443,9 @@
 
             // List of potential unlock phrases
             const allPhrases = [
-                "And they were glad when they heard it, and promised to give him money. Mark 14:11",
-                "For where your treasure is, there your heart will be also. Luke 12:34",
-                "Then you will know the truth, and the truth will set you free. John 08:32"
+                "When they heard him they were pleased and promised to pay him money. Mark 14:11",
+                "For where your treasure is, there also will your heart be. Luke 12:34",
+                "and you will know the truth, and the truth will set you free. John 08:32"
             ];
 
             let correctPassphrase = "";
